로또톡톡 다시 스토어 등록 완료
개인정보처리 방침 및 버전 이슈로 여러차례 시도 후 드디어 게시완료.

--- a/index.html
+++ b/index.html
@@ -209,10 +209,11 @@
     </div>
     <footer>
         <p class="footer_text" id="update_show">Hesper 가 만든 로또추첨기</p>
-        <p class="footer_text ver">Ver 2.0<span> 23-03-11</span></p>
+        <p class="footer_text ver">Ver 2.1<span> 24-05-26</span></p>
         <div class="ver_history">
-            <p class="footer_text">Ver 2.0 - '로또톡톡' BI 제작 및 헤더에 넣기 <span> 23-03-11</span></p>
-            <p class="footer_text">Ver 1.9 - 애널리틱스 달기 <span> 23-02-24</span></p>
+            <p class="footer_text">Ver 2.1 - '로또톡톡' 플레이 스토어에 새로 등록 및 게시 완료 <span> 24-05-26</span></p>
+            <p class="footer_text">Ver 2.0 - '로또톡톡' BI 제작 및 헤더에 넣기 <span> 24-03-11</span></p>
+            <p class="footer_text">Ver 1.9 - 애널리틱스 달기 <span> 24-02-24</span></p>
             <p class="footer_text">Ver 1.8 - 팝업X 바텀시트로 변경(요즘 st.) 아이콘도 3D로 변경<span> 24-01-13</span></p>
             <p class="footer_text">Ver 1.7 - 로또톡톡으로 변경 (코드만)(음성리딩 개발중)+번호별색변경,당첨된 번호 크롤링개발중<span> 24-01-01/05</span></p>
             <p class="footer_text">Ver 1.6 - 스토어에 chat gpt 등재로 앱내려가서 2개월만에 다시올림, PC에서 모바일로보이게 사이즈 수정<span>
@@ -714,18 +715,6 @@
             });
         });
 
-
-
-
-        /* 
-        다시 해보자
-        https://www.dhlottery.co.kr/common.do?method=getLottoNumber&drwNo=1100
-        이 사이트에 있는 body 요소 내의 text를
-        내 html 의 .big_title 요소로 대체하고 싶어 
-        제이쿼리 코드줘
-
-
-        */
 
 
 
